# opsfleet

./: .dockerignore  .env.example  .env.example.new  .env.local.example  .gitignore  AGENT_IMPROVEMENTS_V2.md  AUTH_FIX.md  AUTO_RETRY_FEATURE.md  BIGQUERY_QUICKSTART.md  BIGQUERY_TIMESTAMP_FIX.md  CLARIFICATION_FEATURE.md  CLARIFICATION_FIX.md  CLI_ENHANCED.md  CLI_SIMPLE_README.md  COMPREHENSIVE_IMPROVEMENTS.md  CONTEXT_ENGINEERING.md  DATA_CACHING.md  DEMO_COMMANDS.md  Dockerfile  ENHANCED_CLI.md  FINAL_STATUS.md  FINAL_SUMMARY.md  GENIUS_PLANNER.md  GITHUB_SETUP.md  IMPLEMENTATION_SUMMARY.md  INTEGRATE_GENIUS_PLANNER.md  LANGGRAPH_SETUP.md  LANGGRAPH_SHOWCASE.md  LANGSMITH_SETUP.md  LANGSMITH_THREADS.md  NEXT_STEPS_FEATURE.md  PANDAS_TABLES_FEATURE.md  PERSISTENT_SCHEMA_CACHE.md  PLANNING_ERROR_FIX.md  PROFESSIONAL_AGENT_COMPLETE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README-SIMPLE.md  README.md  REALTIME_CLI_DISPLAY.md  (+40 more)
config/: agent_config.json  mcp_config.json
docs/: ADVANCED_ORCHESTRATION_COMPLETE.md  AGENT_PATTERNS.md  ARCHITECTURE.md  BIGQUERY_AGENT_GUIDE.md  BUG_FIX_JOIN.md  CLI_FIXED.md  CLI_READY.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  ENHANCED_AGENT_STAGES.md  ENSEMBLE_COMPLETE.md  ENSEMBLE_MODE.md  FINAL_IMPROVEMENTS.md  JSON_EXTRACTION_FIX.md  LANGSMITH_THREADS_IMPLEMENTATION.md  LOGGING_FEATURE.md  MODEL_ROUTER.md  OLLAMA_INTEGRATION.md  OPTIMIZATION_SUMMARY.md  PROFESSIONAL_CLI.md  PROJECT_STATUS.md  QUICKSTART_CLI.md  REACT_STEP_BY_STEP.md  SCHEMA_AWARE_FIXING.md  SELF_HEALING_EXECUTION.md  SESSION_MANAGEMENT.md  STEP_OUTPUTS_FEATURE.md  (+5 more)
(+51 files in other folders)
